Fix overflow issues

--- a/src/Bootstrap/less/theme/page-display-package-v2.less
+++ b/src/Bootstrap/less/theme/page-display-package-v2.less
@@ -506,5 +506,12 @@
         margin-top: 0px;
       }
     }
+
+    #readme-tab {
+      // Don't allow README images to overflow
+      img {
+        max-width: 100%;
+      }
+    }
   }
 }
